--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Analista de Dados Profissional</h1>
+                <h1>Analista de Dados</h1>
                 <p>Transformando dados em insights valiosos para decisões estratégicas</p>
                 <a href="https://wa.me/5547984336259" class="btn" target="_blank">Entrar em Contato</a>
             </div>
