--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Robson Camargo | Analista de Dados</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* Reset e Estilos Globais */
         * {
             margin: 0;
             padding: 0;
@@ -26,7 +25,6 @@
             padding: 0 20px;
         }
         
-        /* Header Atualizado */
         header {
             background: #2c3e50;
             color: white;
@@ -379,7 +377,7 @@
         <div class="container">
             <h2 class="section-title">Sobre Mim</h2>
             <div class="about-content">
-                <div class="about-text" style="width: 100%;">  <!-- Adicionei style="width: 100%" -->
+                <div class="about-text" style="width: 100%;">
                 <p>Olá, eu sou Robson Camargo, analista de dados com sólida base técnica e paixão por transformar dados brutos em insights estratégicos.</p>
                 <p>Domino ferramentas essenciais como <b>Python</b> para análise de dados, <b>SQL</b> para manipulação de bancos de dados, <b>Power BI</b> para visualizações impactantes e <b>Excel</b> para soluções ágeis, aliados a conhecimentos em estatística aplicada e princípios de design para visualização de dados.</p>
                 <p>Atualmente em transição de carreira para a área de dados, desenvolvi projetos práticos que demonstram minha capacidade de solucionar problemas reais através da análise de dados - convido você a explorá-los abaixo.</p>
