--- a/index.html
+++ b/index.html
@@ -420,21 +420,22 @@
                 </div>
             </div>
             
-            <!-- Projeto 3 
+             Projeto 3 
             <div class="project-card">
                 <div class="project-img">
-                    <img src="https://via.placeholder.com/600x400" alt="Projeto 3">
+                    <img src="https://raw.githubusercontent.com/Camargo098/custumer-churn-analysis/main/analise_churn.png" alt="Projeto 3">
                 </div>
                 <div class="project-info">
-                    <h3>Previsão de Séries Temporais</h3>
-                    <p>Modelo ARIMA para previsão de demanda de produtos com interface web para input de parâmetros.</p>
+                    <h3>Previsão de Churn em Clientes Bancários</h3>
+                    <p>A idea base do projeto foi desenvolver do inicio ao fim uma solução de negócios baseda em dados para prever churn de clientes de um serviço bancário.</p>
                     <div class="project-tags">
-                        <span class="tag">R</span>
-                        <span class="tag">Shiny</span>
-                        <span class="tag">ARIMA</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">XGBoost</span>
+                        <span class="tag">CRISP-DM</span>
                     </div>
-                    <a href="#" class="btn">Ver Projeto</a>
-                </div> -->
+                    <a href="https://github.com/Camargo098/custumer-churn-analysis/blob/main/churn-analysis.ipynb" class="btn">Ver Projeto</a>
+                </div> 
+            </div>
             </div>
         </div> <!-- Fecha projects-grid -->
     </div> <!-- Fecha container -->
