--- a/index.html
+++ b/index.html
@@ -165,8 +165,14 @@
         /* Projetos */
         .projects-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+            grid-template-columns: repeat(3, 1fr); /* Exatamente 3 colunas em telas maiores */
             gap: 30px;
+        }
+        
+        @media (max-width: 768px) {
+            .projects-grid {
+                grid-template-columns: 1fr; /* 1 coluna em telas menores */
+            }
         }
         
         .project-card {
